2006-11-05 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Make backspace work again at end of text

	* src/TextBufferMarkup.py:
	* src/DrawingThought.py:
	* src/UndoManager.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* src/MMapArea.py:
	* src/Makefile.am:
	* data/labyrinth-ui.xml:
	Add undo and redo capabilities
	Each action should be mirrored properly
	Thought selection across undo's may be somewhat
	shaky and inconsistant.
	There are probably also many bugs still in the
	implementation

	* src/Links.py:
	Clean up old Links class


2006-11-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Hook up remaining (interesting) signals from IMContext
	Insert preedit text where appropriate (including all the
	shiny pango attrs that go with it)

	* src/TextThought.py:
	Check the function return for get_direction, not just the function
	address.  Oops.

	* src/BaseThought.py:
	Don't print events - just pass silently

	* src/TextThought.py:
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/prefs.py:
	* src/labyrinth.py:
	* src/Makefile.am:
	Catch (temporarily) im_context signals and dump to terminal
	Add prefs.py to calculate / store preferences
	Add RTL mode when in a RTL environment -
	right edge anchored and edit sign displayed in
	top right corner
	Mixing RTL and LTR doesn't work so well yet.

	* src/MainWindow.py:
	Fix creation of new maps - MapNumber wasn't referenced
	properly

	* src/DrawingThought.py:
	* src/utils.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Links.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	Merge of "Rework" branch.
	Architecture rework of MMapArea and Thoughts
	Fixes (hopefully) many problems encountered thus far
	In addition, new features that have fallen out:
	- Kill Move mode.
	 - In edit mode, single click selects
	 - Single click + drag moves
	 - Double click edits