@@ -1,6 +1,11 @@
 2006-11-05 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
 	* src/TextThought.py:
+	implement ctrl-a in thoughts.
+	Various improvments in handling
+	arrow keys
+
+	* src/TextThought.py:
 	Make backspace work again at end of text
 
 	* src/TextBufferMarkup.py:
